fixing bug de z-index

--- a/styles/style-home.css
+++ b/styles/style-home.css
@@ -116,6 +116,7 @@ a .active,a:hover {
         left: -100%;
         text-align: center;
         transition: all .5s;
+        z-index: 999;
     }
     nav ul li {
         display: block;
@@ -136,6 +137,7 @@ a .active,a:hover {
 
 nav {
     height: 10vh;
+
 }
 
 
@@ -180,6 +182,7 @@ nav {
     grid-row-gap: 0px;
     place-items: center;
     padding: 40px;
+    z-index: 0;
 }
 
 @media screen and (max-width: 990px) {
